--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,7 @@
+
 :root {
+  --appColor:  #60656e;
   --box-colour: aqua;
-}
-:root {
   --auth-font-family: "Nunito-ExtraBold", Helvetica;
   --auth-font-size: 18px;
   --auth-font-style: normal;
@@ -40,12 +40,18 @@
 }
 
 
+::-webkit-scrollbar{
+  display: none;
+}
+
 html {
   height: 100vh;
+  width: 100vw;
 }
 
 body {
   height: 100%;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -53,7 +59,6 @@ body {
 
 .inner {
   background-color: var(--box-colour);
-
   border-radius: 10px;
   height: 400px !important;
   width: 400px;
