--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -16,7 +16,7 @@
   --collection-1-purple: rgba(87, 26, 255, 1);
   --collection-1-secondary: rgba(36, 218, 166, 1);
   --collection-1-support: rgba(71, 4, 255, 0.68);
-  --collection-1-tatjva: rgba(126, 79, 255, 1);
+  --collection-1-tathva: rgba(126, 79, 255, 1);
   --collection-1-third: rgba(239, 206, 241, 1);
   --collection-1-white: rgba(255, 255, 255, 1);
   --date-font-family: "Epilogue-Bold", Helvetica;
