--- a/frontend/src/components/AuthFrame/AuthFrame.css
+++ b/frontend/src/components/AuthFrame/AuthFrame.css
@@ -3,15 +3,53 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  gap: 2rem;
-  position: relative;
-  top: 3rem
 }
 
-.auth-frame .default {
-  gap: 3rem;
+.auth-slider {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
-.auth-frame .variant-2 {
-  gap: 1rem;
+.default {
+  gap: 2.5rem;
+}
+
+.variant-2 {
+  gap: 1.5rem;
+}
+
+/** Tablet */
+@media (max-width: 768px) {
+  .auth-slider {
+    gap: 2rem;
+  }
+  .default {
+    gap: 1.5rem;
+  }
+  .variant-2 {
+    gap: 1rem;
+  }
+}
+
+/** Mobile */
+@media (max-width: 500px) {
+  .auth-slider {
+    flex-direction: column;
+  }
+  .default {
+    gap: 2.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .variant-2 {
+    gap: 1.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
 }
