--- a/frontend/src/components/AuthSlider/AuthSlider.css
+++ b/frontend/src/components/AuthSlider/AuthSlider.css
@@ -1,68 +1,105 @@
 .auth-slider {
-    align-items: flex-start;
-    display: inline-flex;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  position: relative;
+  gap: 2rem;
+}
+
+.group {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--collection-1-white);
+  border: 2px solid;
+  border-color: var(--collection-1-secondary);
+  border-radius: 3rem;
+  height: 57px;
+  width: 320px;
+  color: var(--collection-1-black);
+  font-family: var(--auth-font-family);
+  font-size: var(--auth-font-size);
+  font-style: var(--auth-font-style);
+  font-weight: var(--auth-font-weight);
+  transition: all 0.2s ease-in-out;
+}
+.group:hover {
+  cursor: pointer;
+}
+
+.rectangle {
+  background-color: var(--collection-1-secondary);
+  border: 2px solid;
+  border-color: var(--collection-1-third);
+  border-radius: 3rem;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  height: 57px;
+  position: absolute;
+  width: 160px;
+  transition: all 0.2s ease-in-out;
+}
+
+.rectangle:hover {
+  cursor: pointer;
+}
+
+.default {
+  left: 0;
+  translate: all 0.2s ease-in-out;
+}
+
+.variant-2 {
+  right: 0;
+  translate: all 0.2s ease-in-out;
+}
+
+.group .left {
+  position: absolute;
+  left: 3rem;
+}
+
+.group .right {
+  position: absolute;
+  right: 3rem;
+}
+
+/** Tablet */
+@media (max-width: 768px) {
+  .auth-slider {
     flex-direction: column;
-    gap: 10px;
-    position: relative;
-    transition: all 0.3s ease-in-out;
   }
-  
-  .auth-slider .group {
-    background-color: var(--collection-1-white);
-    border: 2px solid;
-    border-color: var(--collection-1-secondary);
-    border-radius: 40px;
-    height: 57px;
-    position: relative;
-    width: 352px;
+  .group {
+    width: 280px;
   }
-  
-  .auth-slider .rectangle {
-    background-color: var(--collection-1-secondary);
-    border: 2px solid;
-    border-color: var(--collection-1-third);
-    border-radius: 40px;
-    box-shadow: 0px 4px 4px #00000040;
-    height: 57px;
-    position: relative;
-    top: -2px;
-    width: 179px;
+  .rectangle {
+    width: 140px;
   }
-  
-  .auth-slider .text-wrapper {
-    color: var(--collection-1-black);
-    font-family: var(--auth-font-family);
-    font-size: var(--auth-font-size);
-    font-style: var(--auth-font-style);
-    font-weight: var(--auth-font-weight);
-    left: 52px;
-    letter-spacing: var(--auth-letter-spacing);
-    line-height: var(--auth-line-height);
-    position: absolute;
-    top: 15px;
-    white-space: nowrap;
+  .group .left {
+    left: 2.4rem;
   }
-  
-  .auth-slider .div {
-    color: var(--collection-1-black);
-    font-family: var(--auth-font-family);
-    font-size: var(--auth-font-size);
-    font-style: var(--auth-font-style);
-    font-weight: var(--auth-font-weight);
-    left: 226px;
-    letter-spacing: var(--auth-letter-spacing);
-    line-height: var(--auth-line-height);
-    position: absolute;
-    top: 15px;
-    white-space: nowrap;
+  .group .right {
+    right: 2rem;
   }
-  
-  .auth-slider .default {
-    left: -2px;
-    translate: all 2s ease-in-out;
+}
+
+/** Mobile */
+@media (max-width: 500px) {
+  .auth-slider {
+    flex-direction: column;
   }
-  
-  .auth-slider .variant-2 {
-    left: 171px;
-    translate: all 2s ease-in-out;
+  .group {
+    width: 280px;
+    height: 52px;
   }
+  .rectangle {
+    width: 140px;
+    height: 52px;
+  }
+  .group .left {
+    left: 2.4rem;
+  }
+  .group .right {
+    right: 2rem;
+  }
+}
