--- a/frontend/src/components/Profile/Profile.css
+++ b/frontend/src/components/Profile/Profile.css
@@ -6,27 +6,16 @@
   z-index: 99;
 }
 
-.profile .button-instance {
-  width: 130px !important;
+.profile:hover {
+  cursor: pointer;
 }
 
 .profile .text-wrapper {
   color: var(--collection-1-secondary);
   font-family: "Nunito", Helvetica;
-  font-size: 26px;
+  font-size: 1.5rem;
   font-weight: 700;
-  letter-spacing: 0;
   line-height: normal;
   position: relative;
   width: fit-content;
-}
-
-.profile .profile-pic-instance {
-  height: 60px !important;
-  width: 60px !important;
-}
-
-.profile .design-component-instance-node {
-  height: 64px !important;
-  width: 64px !important;
 }
