--- a/frontend/src/components/SearchBar/SearchBar.css
+++ b/frontend/src/components/SearchBar/SearchBar.css
@@ -1,40 +1,33 @@
 .search-bar {
+  display: flex;
+  align-items: center;
   background-color: var(--collection-1-white);
   border: 2px solid;
   border-color: var(--collection-1-secondary);
-  border-radius: 10px;
+  border-radius: 1rem;
   height: 45px;
   width: 970px;
 }
 
-.search-bar .frame {
-  align-items: center;
+.frame {
   display: flex;
-  gap: 21px;
-  height: 17px;
-  left: 19px;
-  position: relative;
-  top: 12px;
-  width: 157px;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 1rem;
+  margin-left: 1rem;
+  width: 90%;
 }
 
-.search-bar .vector {
-  height: 17.49px;
+.frame img {
   position: relative;
-  width: 17.49px;
+  top: 3px;
 }
 
-.search-bar .text-wrapper-3 {
-  color: #000000;
-  font-family: var(--type-font-family);
+.hint-text {
+  border: none;
+  outline: none;
   font-size: var(--type-font-size);
   font-style: var(--type-font-style);
   font-weight: var(--type-font-weight);
-  letter-spacing: var(--type-letter-spacing);
-  line-height: var(--type-line-height);
-  margin-right: -24.31px;
-  margin-top: -0.25px;
-  position: relative;
-  white-space: nowrap;
-  width: fit-content;
+  width: 100%;
 }
