--- a/frontend/src/components/AuthFrame/AuthFrame.css
+++ b/frontend/src/components/AuthFrame/AuthFrame.css
@@ -3,21 +3,27 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  gap: 1rem;
 }
 
 .auth-slider {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
+  margin-bottom: 1rem;
 }
 
-.default {
+.inputs {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 100%;
+  height: 220px;
+}
+
+.login {
   gap: 2.5rem;
 }
 
-.variant-2 {
-  gap: 1.5rem;
+.signup {
+  gap: 1rem;
 }
 
 /** Tablet */
@@ -25,10 +31,10 @@
   .auth-slider {
     gap: 2rem;
   }
-  .default {
+  .login {
     gap: 1.5rem;
   }
-  .variant-2 {
+  .signup {
     gap: 1rem;
   }
 }
@@ -38,14 +44,14 @@
   .auth-slider {
     flex-direction: column;
   }
-  .default {
+  .login {
     gap: 2.5rem;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
   }
-  .variant-2 {
+  .signup {
     gap: 1.5rem;
     display: flex;
     align-items: center;
