--- a/frontend/src/components/HomeSlider/HomeSlider.css
+++ b/frontend/src/components/HomeSlider/HomeSlider.css
@@ -1,65 +1,62 @@
-.auth-slider {
-  align-items: flex-start;
+.home-slider {
   display: flex;
-  flex-direction: column;
-  gap: 10px;
   position: relative;
-  width: 460px;
+  gap: 2rem;
+  width: 400px;
 }
 
-.auth-slider .group {
+.home-slider .group {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: var(--collection-1-white);
   border: 2px solid;
   border-color: var(--collection-1-secondary);
   border-radius: 10px;
-  height: 52px;
-  margin-right: -1px;
-  position: relative;
-  width: 461px;
+  height: 57px;
+  width: 400px;
+  color: var(--collection-1-black);
+  font-family: var(--auth-font-family);
+  font-size: var(--auth-font-size);
+  font-style: var(--auth-font-style);
+  font-weight: var(--auth-font-weight);
+  transition: all 0.2s ease-in-out;
 }
 
-.auth-slider .rectangle {
+.group:hover {
+  cursor: pointer;
+}
+
+.home-slider .group .rectangle {
   background-color: var(--collection-1-secondary);
   border: 2px solid;
   border-color: var(--collection-1-third);
   border-radius: 10px;
-  box-shadow: 0px 4px 4px #00000040;
-  height: 52px;
-  position: relative;
-  top: -2px;
-  width: 230px;
-}
-
-.auth-slider .div {
-  color: var(--collection-1-black);
-  font-family: var(--auth-font-family);
-  font-size: var(--auth-font-size);
-  font-style: var(--auth-font-style);
-  font-weight: var(--auth-font-weight);
-  left: 62px;
-  letter-spacing: var(--auth-letter-spacing);
-  line-height: var(--auth-line-height);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  height: 57px;
   position: absolute;
-  top: 14px;
+  width: 200px;
+  transition: all 0.2s ease-in-out;
 }
 
-.auth-slider .text-wrapper-2 {
-  color: var(--collection-1-black);
-  font-family: var(--auth-font-family);
-  font-size: var(--auth-font-size);
-  font-style: var(--auth-font-style);
-  font-weight: var(--auth-font-weight);
-  left: 303px;
-  letter-spacing: var(--auth-letter-spacing);
-  line-height: var(--auth-line-height);
+.rectangle:hover {
+  cursor: pointer;
+}
+
+.group .left {
   position: absolute;
-  top: 14px;
+  left: 3rem;
 }
 
-.auth-slider .default {
-  left: -2px;
+.group .right {
+  position: absolute;
+  right: 3rem;
 }
 
-.auth-slider .variant-2 {
-  left: 229px;
+.registered {
+  left: 0;
+}
+
+.available {
+  right: 0;
 }
