--- a/frontend/src/screens/UserHome/UserHome.css
+++ b/frontend/src/screens/UserHome/UserHome.css
@@ -6,11 +6,12 @@
   justify-content: center;
   align-items: center;
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
+  overflow-y: scroll;
   gap: 3rem;
 }
 
-.user-home .quiz-list {
+.quiz-list {
   display: flex;
   gap: 2rem;
 }
