--- a/frontend/src/components/QuizCard/QuizCard.css
+++ b/frontend/src/components/QuizCard/QuizCard.css
@@ -1,69 +1,38 @@
-.quiz-card {
-  height: 550px;
-  width: 337px;
-}
 
-.quiz-card .frame-wrapper {
+.quiz-card {
   background: linear-gradient(
-    180deg,
+    120deg,
     rgb(121.21, 196.56, 192.04) 0%,
     rgb(239.06, 137.46, 137.46) 100%
   );
   border: 2px solid;
   border-color: var(--collection-1-purple);
-  border-radius: 10px;
-  height: 536px;
-}
-
-.quiz-card .frame-3 {
-  align-items: flex-start;
+  border-radius: 1rem;
+  padding: 1rem;
+  height: fit-content;
+  width: 340px;
   display: flex;
   flex-direction: column;
-  gap: 22px;
-  height: 496px;
-  left: 17px;
-  position: relative;
-  top: 18px;
-  width: 300px;
+  gap: 1rem;
 }
 
-.quiz-card .img {
-  height: 308px;
-  margin-left: -4px;
-  margin-right: -4px;
-  object-fit: cover;
-  position: relative;
-  width: 308px;
-}
-
-.quiz-card .frame-4 {
-  align-items: flex-start;
+.quiz-poster {
   display: flex;
-  flex: 0 0 auto;
+  justify-content: center;
+  align-items: center;
+  border-radius: 1rem;
+  width: 100%;
+}
+
+.quiz-poster img {
+  border-radius: 1rem;
+  width: 100%;
+  height: 300px;
+}
+
+.details {
+  display: flex;
   flex-direction: column;
-  gap: 24px;
-  position: relative;
-  width: 300px;
-}
-
-.quiz-card .frame-5 {
-  align-items: flex-start;
-  display: inline-flex;
-  flex: 0 0 auto;
-  gap: 49px;
-  position: relative;
-}
-
-.quiz-card .frame-6 {
-  align-items: flex-start;
-  display: inline-flex;
-  flex: 0 0 auto;
-  flex-direction: column;
-  gap: 10px;
-  position: relative;
-}
-
-.quiz-card .text-wrapper-6 {
   color: var(--collection-1-purple);
   font-family: var(--type-font-family);
   font-size: var(--type-font-size);
@@ -71,13 +40,27 @@
   font-weight: var(--type-font-weight);
   letter-spacing: var(--type-letter-spacing);
   line-height: var(--type-line-height);
-  margin-top: -1px;
-  position: relative;
-  white-space: nowrap;
-  width: fit-content;
+  width: 100%;
+  gap: 2rem;
 }
 
-.quiz-card .did-you-know-quiz {
+.main-details {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.main-details .data {
+  display: flex;
+  flex-direction: column;
+  justify-self: center;
+  align-items: start;
+  gap: 0.5rem;
+}
+
+.quiz-name {
   color: var(--collection-1-black);
   font-family: var(--quiz-name-font-family);
   font-size: var(--quiz-name-font-size);
@@ -89,34 +72,16 @@
   width: fit-content;
 }
 
-.quiz-card .date-instance {
-  position: relative !important;
-}
-
-.quiz-card .frame-7 {
+.timer {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
   align-items: center;
-  display: inline-flex;
-  flex: 0 0 auto;
-  gap: 94px;
-  position: relative;
 }
 
-.quiz-card .text-wrapper-7 {
+.text-wrapper-7 {
   color: var(--collection-1-purple);
   font-family: "Quicksand", Helvetica;
   font-size: 18px;
   font-weight: 500;
-  letter-spacing: 0;
-  line-height: normal;
-  position: relative;
-  width: fit-content;
-}
-
-.quiz-card .button-2 {
-  height: 44px !important;
-  width: 120px !important;
-}
-
-.quiz-card .button-3 {
-  margin-top: -2.5px !important;
 }
