--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -44,22 +44,29 @@
 }
 
 html {
-  height: 100vh;
   width: 100vw;
+  min-height: 100vh;
 }
 
 body {
   height: 100%;
   width: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: start;
+  align-items: start;
+}
+
+.app-root{
+  display: flex;
+  flex-direction: column;
   align-items: center;
+  justify-content: start;
 }
 
 .inner {
   background-color: var(--box-colour);
   border-radius: 10px;
-  height: 400px !important;
+  height: 400px;
   width: 400px;
 }
 
