--- a/frontend/src/components/Hero/Hero.css
+++ b/frontend/src/components/Hero/Hero.css
@@ -1,11 +1,10 @@
 
 .hero-section {
-    align-items: flex;
+    display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: start;
     box-shadow: 0px 4px 4px #00000040;
-    display: inline-flex;
     flex-direction: column;
     gap: 2rem;
     background: linear-gradient(
@@ -17,6 +16,7 @@
     );
     padding: 0.6rem 4rem 2rem 4rem;
     border-radius: 2rem;
+    width: 80%;
 }
 
 .top-part {
