--- a/frontend/src/screens/UserHome/UserHome.css
+++ b/frontend/src/screens/UserHome/UserHome.css
@@ -3,7 +3,7 @@
   background-color: var(--loginColor);
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
   width: 100vw;
   min-height: 100vh;
@@ -13,5 +13,11 @@
 
 .quiz-list {
   display: flex;
+  gap: 2rem;
+}
+
+.list-of-quizzes {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
   gap: 2rem;
 }
