--- a/frontend/src/components/Hero/Hero.css
+++ b/frontend/src/components/Hero/Hero.css
@@ -29,6 +29,7 @@
 
 .bottom-part {
     display: flex;
+    align-items: center;
     width: 100%;
     justify-content: space-between;
 }
@@ -73,6 +74,60 @@
 .quiz-type {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     gap: 1.5rem;
+}
+
+/** Mobile **/
+@media screen  and (max-width: 700px){
+    .hero-section {
+        width: 100%;
+        border-radius: 1rem;
+        padding: 0.5rem;
+    }
+
+    .bottom-part {
+        flex-direction: column;
+        align-items: center;
+        gap: 1rem;
+    }
+
+    .hero-right {
+        display: none;
+    }
+
+    .QUIZZES-for-you {
+        margin-left: 5%;
+        display: flex;
+        flex-direction: column;
+        font-size: 55px;
+    }
+    .QUIZZES-for-you span:nth-child(2) {
+        display: none;
+    }
+}
+
+/** Tablet **/
+@media screen  and (max-width: 1000px){
+    .hero-section {
+        width: 100%;
+        border-radius: 1rem;
+        padding: 1.4rem;
+    }
+
+    .hero-right {
+        height: 300px;
+    }
+
+    .QUIZZES-for-you {
+        margin-left: 5%;
+        display: flex;
+        flex-direction: column;
+        font-size: 70px;
+    }
+    .QUIZZES-for-you span:nth-child(2) {
+        display: none;
+    }
 }
