Home slider fixed

--- a/frontend/src/components/HomeSlider/HomeSlider.css
+++ b/frontend/src/components/HomeSlider/HomeSlider.css
@@ -68,7 +68,7 @@
     width: 90%;
     height: 48px;
   }
-  .home-slider .group .rectangle {
+  .home-rectangle {
     height: 50px;
     width: 50%;
   }
