--- a/frontend/src/components/Button/Button.css
+++ b/frontend/src/components/Button/Button.css
@@ -3,8 +3,8 @@
   background-color: var(--collection-1-secondary);
   border: 2px solid;
   border-color: var(--collection-1-third);
-  border-radius: 1rem;
-  box-shadow: -4px 4px 4px #00000040;
+  border-radius: 12px;
+  box-shadow: 0px 4px 4px #00000040;
   box-sizing: border-box;
   display: flex;
   gap: 10px;
@@ -13,6 +13,11 @@
   justify-content: center;
   position: relative;
   width: fit-content;
+}
+
+.button:hover {
+  border-color: var(--collection-1-secondary);
+  cursor: pointer;
 }
 
 .button .submit {
