--- a/frontend/src/components/QuizCard.css
+++ b/frontend/src/components/QuizCard.css
@@ -1,58 +1,33 @@
 .quizcard-container {
-    
-    width: 16rem;
+    height: 20rem;
+    width: 30rem;
+
     border-radius: 1rem;
     box-shadow: 0px 10px 8px #999;
+
     display: flex;
-    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-end;
+    /* padding: 2rem; */
     margin: 0.5rem;
+}
 
-    /* background-color:rgb(37, 1, 93); */
-    background-image: linear-gradient(to right,rgb(44, 0, 109) ,black ,rgb(44, 0, 109));
-
+.front {
+    height: 20rem;
+    width: 30rem;
+    border-radius: 1rem;
+    /* box-shadow: 0px 10px 8px #999; */
+    display: flex;
+    flex-direction: row;
+    background-image: linear-gradient(rgb(44, 0, 109), black, rgb(44, 0, 109));
     height: fit-content;
+    width: fit-content;
 }
 
-.quiz-image{
-    width: 90%;
-    border-radius: 0.5rem 0.5rem 0.5rem 0.5rem;
-    /* padding: 0.5rem 1rem; */
-    align-self: center;
-    margin: 0.5rem 0.5rem;
-}
-
-.quiz-title {
-    margin: 0.5rem 5%;
-    color: white;
-    font-weight:400;
-}
-
-.quiz-desc {
-    margin: 0.5rem 0.5rem;
-    font-family: Arial, Helvetica, sans-serif;
-    color: white;
-    font-size: 15px;
-    /* text */
-
-    /* font-size: 5em; */
-
-}
-
-.reg-link {
-    /* text-align: right; */
-    text-align: center;
-    width: 25%;
-
-    border-radius: 5px;
-
-    padding: 0.5rem 1rem;
-    background-color:blue;
-    border: #bd3131 10px;
-    /* background-image: linear-gradient(rgb(44, 0, 109) ,black ,rgb(44, 0, 109)); */
-
-    color: bisque;
-    margin: 0.5rem 0.5rem;
-
-    margin-left: 55%;
-    /* float : right; */
+.graph {
+    height: 20rem;
+    width: 30rem;
+    border-radius: 1rem;
+    /* box-shadow: 0px 10px 8px #999; */
+    display: flex;
 }
