--- a/frontend/src/components/AuthSlider/AuthSlider.css
+++ b/frontend/src/components/AuthSlider/AuthSlider.css
@@ -15,11 +15,11 @@
   border: 2px solid;
   border-color: var(--collection-1-secondary);
   border-radius: 3rem;
-  height: 57px;
-  width: 320px;
+  height: 52px;
+  width: 280px;
   color: var(--collection-1-black);
   font-family: var(--auth-font-family);
-  font-size: var(--auth-font-size);
+  font-size: 1rem;
   font-style: var(--auth-font-style);
   font-weight: var(--auth-font-weight);
   transition: all 0.2s ease-in-out;
@@ -34,9 +34,9 @@
   border-color: var(--collection-1-third);
   border-radius: 3rem;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  height: 57px;
+  height: 52px;
   position: absolute;
-  width: 160px;
+  width: 140px;
   transition: all 0.2s ease-in-out;
 }
 
@@ -56,12 +56,12 @@
 
 .group .left {
   position: absolute;
-  left: 3rem;
+  left: 2.5rem;
 }
 
 .group .right {
   position: absolute;
-  right: 3rem;
+  right: 2rem;
 }
 
 /** Tablet */
