--- a/frontend/src/components/CreateButton/CreateButton.css
+++ b/frontend/src/components/CreateButton/CreateButton.css
@@ -2,15 +2,20 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 0.6rem;
+    gap: 0.4rem;
     background-color: var(--collection-1-secondary);
     width: fit-content;
-    padding: 0.5rem 1rem;
+    padding: 0.3rem 0.6rem;
     font-size: 1.2rem;
     font-weight: 700;
     border-radius: 10px;
     border: 2px solid var(--collection-1-third);
     box-shadow: 0px 4px 4px #00000040;
+}
+
+.create-btn img{
+    height: 1.3rem;
+    width: 1.3rem;
 }
 
 .create-btn:hover {
