--- a/frontend/src/components/Hero/Hero.css
+++ b/frontend/src/components/Hero/Hero.css
@@ -6,7 +6,6 @@
     align-items: start;
     box-shadow: 0px 4px 4px #00000040;
     flex-direction: column;
-    gap: 1rem;
     background: linear-gradient(
       180deg,
       rgb(41.97, 40.3, 43.56) 0%,
@@ -14,22 +13,24 @@
       rgb(92.54, 48.05, 142.38) 99.99%,
       rgba(13.56, 13.29, 13.81, 0) 100%
     );
-    padding: 0.6rem 4rem 2rem 4rem;
+    padding: 1rem 2rem 0rem 2rem;
     border-radius: 2rem;
-    width: 80%;
+    width: 85vw;
 }
 
 .top-part {
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    justify-content: flex-start;
     align-items: center;
     width: 100%;
 }
 
 .bottom-part {
+    position: relative;
+    bottom: 2rem;
     display: flex;
-    align-items: center;
+    align-items: end;
     width: 100%;
     justify-content: space-between;
 }
@@ -37,30 +38,28 @@
 .hero-left {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    align-items: flex-start;
+    align-items: start;
 }
 
 .hero-right {
-    height: 350px;
+    height: 250px;
 }
 
 .hero-right img {
     height: 100%;
     width: 100%;
     object-fit: cover;
-    border-radius: 2rem;
+    border-radius: 1.5rem;
     box-shadow: 0px 4px 4px #00000040;
 }
 
 .QUIZZES-for-you {
     color: var(--collection-1-tatjva);
     font-family: "Epilogue", Helvetica;
-    font-size: 80px;
+    font-size: 4rem;
     font-weight: 800;
     position: relative;
     width: fit-content;
-    margin-top: 2rem;
 }
   
 .quiz {
@@ -76,35 +75,13 @@
     flex-direction: column;
     justify-content: center;
     width: 100%;
-    gap: 1.5rem;
+    gap: 0.3rem;
 }
 
-/** Mobile **/
-@media screen  and (max-width: 700px){
+/** Whatever **/
+@media screen and (max-width: 1200px){
     .hero-section {
-        width: 100%;
-        border-radius: 1rem;
-        padding: 0.5rem;
-    }
-
-    .bottom-part {
-        flex-direction: column;
-        align-items: center;
-        gap: 1rem;
-    }
-
-    .hero-right {
-        display: none;
-    }
-
-    .QUIZZES-for-you {
-        margin-left: 5%;
-        display: flex;
-        flex-direction: column;
-        font-size: 55px;
-    }
-    .QUIZZES-for-you span:nth-child(2) {
-        display: none;
+      width: 95vw;
     }
 }
 
@@ -121,10 +98,44 @@
     }
 
     .QUIZZES-for-you {
-        margin-left: 5%;
         display: flex;
         flex-direction: column;
         font-size: 70px;
+    }
+    .QUIZZES-for-you span:nth-child(2) {
+        display: none;
+    }
+}
+
+/** Mobile **/
+@media screen  and (max-width: 700px){
+    .hero-section {
+        width: 100%;
+        border-radius: 1rem;
+        padding: 1rem;
+    }
+
+    .top-part {
+        flex-direction: column;
+        gap: 2rem;
+        align-items: start;
+    }
+
+    .bottom-part {
+        flex-direction: column;
+        align-items: center;
+        gap: 2rem;
+        bottom: 0;
+    }
+
+    .hero-right {
+        display: none;
+    }
+
+    .QUIZZES-for-you {
+        display: flex;
+        flex-direction: column;
+        font-size: 40px;
     }
     .QUIZZES-for-you span:nth-child(2) {
         display: none;
