--- a/frontend/src/components/Profile/Profile.css
+++ b/frontend/src/components/Profile/Profile.css
@@ -1,9 +1,7 @@
 .profile {
   align-items: center;
   display: inline-flex;
-  gap: 31px;
-  position: relative;
-  z-index: 99;
+  gap: 0.3rem;
 }
 
 .profile:hover {
@@ -13,7 +11,7 @@
 .profile .text-wrapper {
   color: var(--collection-1-secondary);
   font-family: "Nunito", Helvetica;
-  font-size: 1.5rem;
+  font-size: 1rem;
   font-weight: 700;
   line-height: normal;
   position: relative;
@@ -21,15 +19,23 @@
 }
 
 .profile-pic {
-  height: 64px;
   position: relative;
-  width: 64px;
+  height: 50px;
+  width: 50px;
 }
 
 .profile-pic .ellipse {
   object-fit: cover;
   position: absolute;
   top: 0;
-  height: 60px;
-  width: 60px;
+  height: 100%;
+  width: 100%;
 }
+
+/** Mobile **/
+@media screen and (max-width: 700px) {
+  .profile-pic {
+    height: 40px;
+    width: 40px;
+  }
+} 
