--- a/frontend/src/components/QuizCard/QuizCard.css
+++ b/frontend/src/components/QuizCard/QuizCard.css
@@ -10,7 +10,7 @@
   border-radius: 1rem;
   padding: 1rem;
   height: fit-content;
-  width: 340px;
+  width: 300px;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -27,7 +27,7 @@
 .quiz-poster img {
   border-radius: 1rem;
   width: 100%;
-  height: 300px;
+  height: 260px;
 }
 
 .details {
@@ -35,13 +35,10 @@
   flex-direction: column;
   color: var(--collection-1-purple);
   font-family: var(--type-font-family);
-  font-size: var(--type-font-size);
+  font-size: 0.9rem;
   font-style: var(--type-font-style);
-  font-weight: var(--type-font-weight);
-  letter-spacing: var(--type-letter-spacing);
-  line-height: var(--type-line-height);
   width: 100%;
-  gap: 2rem;
+  gap: 1rem;
 }
 
 .main-details {
@@ -63,7 +60,7 @@
 .quiz-name {
   color: var(--collection-1-black);
   font-family: var(--quiz-name-font-family);
-  font-size: var(--quiz-name-font-size);
+  font-size: 1.2rem;
   font-style: var(--quiz-name-font-style);
   font-weight: var(--quiz-name-font-weight);
   letter-spacing: var(--quiz-name-letter-spacing);
@@ -77,11 +74,4 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-
-.text-wrapper-7 {
-  color: var(--collection-1-purple);
-  font-family: "Quicksand", Helvetica;
-  font-size: 18px;
-  font-weight: 500;
 }
