--- a/frontend/src/components/SearchBar/SearchBar.css
+++ b/frontend/src/components/SearchBar/SearchBar.css
@@ -5,8 +5,8 @@
   border: 2px solid;
   border-color: var(--collection-1-secondary);
   border-radius: 1rem;
-  height: 50px;
-  width: 100%;
+  height: 40px;
+  width: 50vw;
 }
 
 .frame {
@@ -26,6 +26,7 @@
 .hint-text {
   border: none;
   outline: none;
+  background-color: transparent;
   font-size: var(--type-font-size);
   font-style: var(--type-font-style);
   font-weight: var(--type-font-weight);
