--- a/frontend/src/screens/UserProfile/UserProfile.css
+++ b/frontend/src/screens/UserProfile/UserProfile.css
@@ -9,25 +9,36 @@
     width: 100vw;
 }
 
-.user-profile h3{
+.user-profile h1{
+    font-size: 4rem;
     color: var(--collection-1-secondary);
 }
 
-.profile-section {
-    margin-top: 2rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+.user-profile .hero-left {
     gap: 1rem;
 }
 
-.profile-section img {
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    object-fit: cover;
-    border: 2px solid var(--collection-1-secondary);
+.user-profile h2{
+    font-size: 2rem;
+    color: white;
+}
+
+.profile-section {
+    display: flex;
+    align-items: end;
+    justify-content: space-between;
+    box-shadow: 0px 4px 4px #00000040;
+    background: linear-gradient(
+      180deg,
+      rgb(41.97, 40.3, 43.56) 0%,
+      rgb(236.94, 93.79, 93.79) 0.01%,
+      rgb(92.54, 48.05, 142.38) 99.99%,
+      rgba(13.56, 13.29, 13.81, 0) 100%
+    );
+    padding: 2rem 2rem 2rem 2rem;
+    border-radius: 2rem;
+    width: 85vw;
+    gap: 1rem;
 }
 
 /* Mobile */
