--- a/frontend/src/components/QuizCard.css
+++ b/frontend/src/components/QuizCard.css
@@ -1,6 +1,8 @@
 .quizcard-container {
-    height: 20rem;
-    width: 30rem;
+    /* height: 20rem;
+    width: 30rem; */
+    height: fit-content;
+    width: fit-content;
 
     border-radius: 1rem;
     box-shadow: 0px 10px 8px #999;
@@ -13,20 +15,29 @@
 }
 
 .front {
-    height: 20rem;
-    width: 30rem;
-    border-radius: 1rem;
-    /* box-shadow: 0px 10px 8px #999; */
+    /* height: 20rem;
+    width: 30rem; */
+    height: fit-content;
+    width: fit-content;
+
+
+    /* border-radius: 1rem;
+    box-shadow: 0px 10px 8px #999;
     display: flex;
     flex-direction: row;
     background-image: linear-gradient(rgb(44, 0, 109), black, rgb(44, 0, 109));
     height: fit-content;
-    width: fit-content;
+    width: fit-content; */
 }
 
 .graph {
-    height: 20rem;
-    width: 30rem;
+    /* height: 20rem;
+    width: 30rem; */
+    height: 392px;
+    width: 400px;
+    /* height: fit-content;
+    width: fit-content; */
+
     border-radius: 1rem;
     /* box-shadow: 0px 10px 8px #999; */
     display: flex;
