Login page bug fixed

--- a/frontend/src/components/Options/Options.css
+++ b/frontend/src/components/Options/Options.css
@@ -33,7 +33,7 @@ body{
     text-transform: uppercase;
   }
 
-  .question{
+  .question-sam{
     margin:8px;
 
     box-shadow: 0px 0px 10px 1px #a2a3a3;
