--- a/frontend/src/screens/LoginSignup/LoginSignup.css
+++ b/frontend/src/screens/LoginSignup/LoginSignup.css
@@ -32,7 +32,8 @@
     rgb(219, 148, 147) 0.01%,
     rgb(208.25, 173.02, 170.94) 24.9%,
     rgb(115.35, 205.06, 183.53) 55.39%,
-    rgb(84.79, 119, 116.37) 100%);
+    rgb(84.79, 119, 116.37) 100%
+  );
 }
 
 .auth-container {
