--- a/frontend/src/components/QuizCard/QuizCard.css
+++ b/frontend/src/components/QuizCard/QuizCard.css
@@ -1,4 +1,3 @@
-
 .quiz-card {
   background: linear-gradient(
     120deg,
@@ -75,4 +74,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.timing img {
+  width: 20px;
+  height: 20px;
 }
