--- a/frontend/src/components/Options/Options.css
+++ b/frontend/src/components/Options/Options.css
@@ -1,138 +1,71 @@
-body{
-    display: flex;
-    align-items: center;
-    justify-content: center;    
-    /* background-image: linear-gradient(purple,rgb(238, 48, 238)); */
-    /* background-color: #3aaccb; */
-    min-height: 100vh;
-    width: 100%;
-  }
-  
-  .container {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    /* min-height: 400px; */
-    width: 400px;
-    background-color: white;
-    border-radius: 15px;
-    /* box-shadow: 2px 2px 10px 1px rgb(102, 3, 102); */
-    /* box-shadow: 2px 2px 10px 1px #333;   */
-    overflow: hidden;
-    padding: 10px;
-    position: relative;
-    /* gap:0.5rem */
-  }
-  .heading-txt{
-    color:white;
-    /* color:#276272; */
-    font-size: 30px;
-    font-weight: bold;
-    margin: 10px;
-    text-align: center;  
-    text-transform: uppercase;
-  }
-
-  .question-sam{
-    margin:8px;
-
-    box-shadow: 0px 0px 10px 1px #a2a3a3;
-    border-radius: 15px;
-    border: 1px solid black;
-
-    padding:5px;
-    /* gap:1rem; */
-
-    font-size: large;
-    font-weight: 600;
-    font-family: 'Times New Roman', Times, serif;
-
-    min-width: 100%;
-    min-height: 50px;
-    
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-#question-number{
-    margin-right: 5px;
+.container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: fit-content;
+  border-radius: 15px;
+  overflow: hidden;
+  padding: 10px;
+  position: relative;
 }
 
-.option-container{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    gap: 1rem;
-
-    /* padding: 5px; */
-    margin: 4px auto;
+.option-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: flex-start !important;
 }
 
 .answer {
-    /* width: 48%; */
-    /* margin: 0rem 0rem; */
-    background: #fff;
-    border: 1px solid black;
-    /* min-height: 70px; */
-    cursor: pointer;
-    /* margin-bottom: 30px; */
-    display: flex;
-    border-radius: 1rem;
+  border: 1px solid var(--darkGrey);
+  cursor: pointer;
+  display: flex;
+  width: 100%;
+  border-radius: 0.4rem;
 }
 .answer-letter {
-    border-radius: 1rem 0rem 0rem 1rem;
-    font-size: 20px;
-    background-color: #0084da;
-    color: #fff;
-    width: 3rem;
-    min-width: 3rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  border-radius: 0.4rem 0rem 0rem 0.4rem;
+  font-size: 20px;
+  background-color: var(--collection-1-secondary);
+  color: white;
+  width: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .answer-text {
-    /* margin: 0rem 0rem; */
-    margin-left: 1rem;
-    font-weight: 500;
-    display: flex;
-    align-items: center;
+  margin-left: 1rem;
+  font-weight: 500;
+  display: flex;
+  width: 100% !important;
+  align-items: center;
 }
 
-
-.checked{
-  /* background-color: rgb(179, 83, 179); */
+.checked {
   background-color: black;
-  color:white;
-  box-shadow: 3px 3px 4px 1px rgb(78, 69, 78);
+  color: white;
 }
 
-/* .option-btn:hover{
-    background-color: rgb(212, 118, 212);
-    color:white;
-} */
-#next-button{
-    padding:10px;
-    border:none;
-    background-color: purple;
-    background-color: #276272;
-    color:white;
-    border-radius: 5px;
-    box-shadow: 3px 3px 2px 1px rgb(127, 109, 109);
-    font-size: larger;
-    font-weight: bold;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    transition: 0.2s;
-    width:100px;
-    position: absolute;
-    bottom: 15px;
-  }
-  #next-button:active{
-    box-shadow:none;    
-  }
-  .show-score{
-    position: absolute;
-    top:30%;
-    font-size: 40px;
-    text-align: center;  
-  }
-
+#next-button {
+  padding: 10px;
+  border: none;
+  background-color: purple;
+  background-color: #276272;
+  color: white;
+  border-radius: 5px;
+  font-size: larger;
+  font-weight: bold;
+  transition: 0.2s;
+  width: 100px;
+  position: absolute;
+  bottom: 15px;
+}
+#next-button:active {
+  box-shadow: none;
+}
+.show-score {
+  position: absolute;
+  top: 30%;
+  font-size: 40px;
+  text-align: center;
+}
