--- a/frontend/src/components/QSlider/QSlider.css
+++ b/frontend/src/components/QSlider/QSlider.css
@@ -1,50 +1,28 @@
 .app_container {
-    /* height: 100vh;
-    display: flex;
-    color: white; */
-    /* background-color: #061161; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: white;
+  border-radius: 1rem;
+  padding: 1rem;
+  width: 600px;
+}
 
-    background-color: white;
-    border-radius: 15px;
-  }
+.timer {
+  border-radius: 50%;
+  width: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 700;
+}
 
-  /* .main {
-    width: 75%;  
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0), #020230),
-      url("../src/assets/image05.png") center;  
-    display: flex;
-    flex-direction: column;
-  } */
-  
-  .top {
-    height: 50%;
-    position: relative;
-    margin: 0px auto;
-  }
-
-  .timer {
-    /* width: 100px;
-    height: 100px; */
-    border-radius: 50%;
-    /* border: 2px solid #ffa800; */
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    /* position: absolute; */
-    /* bottom: -20px;
-    left: -50px; */
-
-    font-size: 15px;
-    font-weight: 700;
-    
-    /* padding: 5px; */
-    margin: 2px auto;
-    /* background: linear-gradient(black, #100241); */
-  }
-
-  .bottom {
-    height: 50%;
-  }
-  
+.question-sam {
+  font-size: large;
+  font-weight: 600;
+  width: 90%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
