--- a/frontend/src/components/Options/Options.css
+++ b/frontend/src/components/Options/Options.css
@@ -1,19 +1,15 @@
-.container {
+.options-component {
   display: flex;
   align-items: center;
   flex-direction: column;
-  width: fit-content;
-  border-radius: 15px;
-  overflow: hidden;
-  padding: 10px;
-  position: relative;
+  gap: 1rem;
 }
 
 .option-container {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
-  align-items: flex-start !important;
+  gap: 0.6rem;
+  align-items: center;
 }
 
 .answer {
@@ -21,6 +17,7 @@
   cursor: pointer;
   display: flex;
   width: 100%;
+  min-width: 200px;
   border-radius: 0.4rem;
 }
 .answer-letter {
@@ -42,7 +39,7 @@
 }
 
 .checked {
-  background-color: black;
+  background-color: rgb(0, 255, 115);
   color: white;
 }
 
