--- a/frontend/src/screens/QuizPage/QuizPage.css
+++ b/frontend/src/screens/QuizPage/QuizPage.css
@@ -3,7 +3,8 @@
   background-color: var(--loginColor);
   display: flex;
   flex-direction: column;
-  justify-content: start;
+  justify-content: center;
+  align-items: center;
   align-items: center;
   width: 100vw;
   min-height: 100vh;
@@ -13,7 +14,6 @@
 
 .question-list {
   display: flex;
-  width: 100%;
+  width: 320px;
   overflow-x: scroll;
-  width: 85%;
 }
