--- a/frontend/src/components/Hero/Hero.css
+++ b/frontend/src/components/Hero/Hero.css
@@ -1,143 +1,143 @@
-
 .hero-section {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: start;
-    box-shadow: 0px 4px 4px #00000040;
-    flex-direction: column;
-    background: linear-gradient(
-      180deg,
-      rgb(41.97, 40.3, 43.56) 0%,
-      rgb(236.94, 93.79, 93.79) 0.01%,
-      rgb(92.54, 48.05, 142.38) 99.99%,
-      rgba(13.56, 13.29, 13.81, 0) 100%
-    );
-    padding: 1rem 2rem 0rem 2rem;
-    border-radius: 2rem;
-    width: 85vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+  box-shadow: 0px 4px 4px #00000020;
+  flex-direction: column;
+  background: linear-gradient(
+    180deg,
+    rgb(41.97, 40.3, 43.56) 0%,
+    rgb(236.94, 93.79, 93.79) 0.01%,
+    rgb(92.54, 48.05, 142.38) 99.99%,
+    rgba(13.56, 13.29, 13.81, 0) 100%
+  );
+  padding: 1rem 2rem 0rem 2rem;
+  border-radius: 2rem;
+  width: 85vw;
 }
 
 .top-part {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-    width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
 }
 
 .bottom-part {
-    position: relative;
-    bottom: 2rem;
-    display: flex;
-    align-items: end;
-    width: 100%;
-    justify-content: space-between;
+  position: relative;
+  bottom: 2rem;
+  display: flex;
+  align-items: end;
+  width: 100%;
+  justify-content: space-between;
 }
 
 .hero-left {
-    display: flex;
-    flex-direction: column;
-    align-items: start;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
 }
 
 .hero-right {
-    height: 250px;
+  height: 250px;
 }
 
 .hero-right img {
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-    border-radius: 1.5rem;
-    box-shadow: 0px 4px 4px #00000040;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 1.5rem;
+  box-shadow: 0px 4px 4px #00000040;
 }
 
 .QUIZZES-for-you {
-    color: var(--collection-1-tatjva);
-    font-family: "Epilogue", Helvetica;
-    font-size: 4rem;
-    font-weight: 800;
-    position: relative;
-    width: fit-content;
+  color: var(--collection-1-tatjva);
+  font-family: "Epilogue", Helvetica;
+  font-size: 4rem;
+  font-weight: 800;
+  position: relative;
+  width: fit-content;
+  pointer-events: none;
 }
-  
+
 .quiz {
-    color: var(--collection-1-secondary);
+  color: var(--collection-1-secondary);
 }
 
 .for-you {
-    color: white;
+  color: white;
 }
 
 .quiz-type {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 100%;
-    gap: 0.3rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  gap: 0.3rem;
 }
 
 /** Whatever **/
-@media screen and (max-width: 1200px){
-    .hero-section {
-      width: 95vw;
-    }
+@media screen and (max-width: 1200px) {
+  .hero-section {
+    width: 95vw;
+  }
 }
 
 /** Tablet **/
-@media screen  and (max-width: 1000px){
-    .hero-section {
-        width: 100%;
-        border-radius: 1rem;
-        padding: 1.4rem;
-    }
+@media screen and (max-width: 1000px) {
+  .hero-section {
+    width: 100%;
+    border-radius: 1rem;
+    padding: 1.4rem;
+  }
 
-    .hero-right {
-        height: 300px;
-    }
+  .hero-right {
+    height: 300px;
+  }
 
-    .QUIZZES-for-you {
-        display: flex;
-        flex-direction: column;
-        font-size: 70px;
-    }
-    .QUIZZES-for-you span:nth-child(2) {
-        display: none;
-    }
+  .QUIZZES-for-you {
+    display: flex;
+    flex-direction: column;
+    font-size: 70px;
+  }
+  .QUIZZES-for-you span:nth-child(2) {
+    display: none;
+  }
 }
 
 /** Mobile **/
-@media screen  and (max-width: 700px){
-    .hero-section {
-        width: 100%;
-        border-radius: 1rem;
-        padding: 1rem;
-    }
+@media screen and (max-width: 700px) {
+  .hero-section {
+    width: 100%;
+    border-radius: 1rem;
+    padding: 1rem;
+  }
 
-    .top-part {
-        flex-direction: column;
-        gap: 2rem;
-        align-items: start;
-    }
+  .top-part {
+    flex-direction: column;
+    gap: 2rem;
+    align-items: start;
+  }
 
-    .bottom-part {
-        flex-direction: column;
-        align-items: center;
-        gap: 2rem;
-        bottom: 0;
-    }
+  .bottom-part {
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+    bottom: 0;
+  }
 
-    .hero-right {
-        display: none;
-    }
+  .hero-right {
+    display: none;
+  }
 
-    .QUIZZES-for-you {
-        display: flex;
-        flex-direction: column;
-        font-size: 40px;
-    }
-    .QUIZZES-for-you span:nth-child(2) {
-        display: none;
-    }
+  .QUIZZES-for-you {
+    display: flex;
+    flex-direction: column;
+    font-size: 40px;
+  }
+  .QUIZZES-for-you span:nth-child(2) {
+    display: none;
+  }
 }
